--- a/QuanLyThuVien/QuanLyThuVien.csproj
+++ b/QuanLyThuVien/QuanLyThuVien.csproj
@@ -46,14 +46,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileText.cs" />
+    <Compile Include="frm_CapNhat.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_CapNhat.Designer.cs">
+      <DependentUpon>frm_CapNhat.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frm_CapNhatLoaiSach.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_CapNhatLoaiSach.Designer.cs">
+      <DependentUpon>frm_CapNhatLoaiSach.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_DanhMuc.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frm_DanhMuc.Designer.cs">
       <DependentUpon>frm_DanhMuc.cs</DependentUpon>
     </Compile>
+    <Compile Include="LoaiSach.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sach.cs" />
+    <EmbeddedResource Include="frm_CapNhat.resx">
+      <DependentUpon>frm_CapNhat.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_CapNhatLoaiSach.resx">
+      <DependentUpon>frm_CapNhatLoaiSach.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frm_DanhMuc.resx">
       <DependentUpon>frm_DanhMuc.cs</DependentUpon>
     </EmbeddedResource>
@@ -81,16 +102,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\docgia.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\search.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\search.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="icon\" />
+    <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
