--- a/QuanLyThuVien/QuanLyThuVien.csproj
+++ b/QuanLyThuVien/QuanLyThuVien.csproj
@@ -47,6 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FileText.cs" />
+    <Compile Include="frm_DocGia.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_DocGia.Designer.cs">
+      <DependentUpon>frm_DocGia.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form_MuonTra.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +87,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sach.cs" />
+    <EmbeddedResource Include="frm_DocGia.resx">
+      <DependentUpon>frm_DocGia.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form_MuonTra.resx">
       <DependentUpon>Form_MuonTra.cs</DependentUpon>
     </EmbeddedResource>
