--- a/QuanLyThuVien_Demo/QuanLyThuVien_Demo.csproj
+++ b/QuanLyThuVien_Demo/QuanLyThuVien_Demo.csproj
@@ -64,6 +64,12 @@
     <Compile Include="Form_MuonTra.Designer.cs">
       <DependentUpon>Form_MuonTra.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmTacGia.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTacGia.Designer.cs">
+      <DependentUpon>frmTacGia.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmTimKiemSach.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +92,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmDangNhap.resx">
       <DependentUpon>frmDangNhap.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTacGia.resx">
+      <DependentUpon>frmTacGia.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmTimKiemSach.resx">
       <DependentUpon>frmTimKiemSach.cs</DependentUpon>
